added registration form

--- a/registration.html
+++ b/registration.html
@@ -2,14 +2,12 @@
 <html>
   <body style="background-color:aqua">
     <h1 style="background-color:aquamarine" align="center"><strong style="text-decoration:rgb(157, 168, 57) ;">SKUCET -</strong><em>Thunder 2k22</em></h1>
-    <a ><img src="sku.png" height="480px"></a>
-    <a><img src="download.jpeg" height="480px"></a>
-    <a ><img src="cricket.jpg" height="480px"></a>
+    <a ><img src="C:\Users\chand\Downloads\sku.png" height="480px"></a>
+    <a><img src="C:\Users\chand\Downloads\download.jpeg" height="480px"></a>
+    <a ><img src="C:\Users\chand\Downloads\cricket.jpg" height="480px"></a>
     <h2 style="color:#F403E4;" style="border: solid;"><p><em>Skucet invites you to participate with us in our great fest.We are conducting many events like dancing,singing,drwing,movie makingetc and there are some technical events like quiz,essay writing,seminor etc</em></p></h2>
     <h1 align="center" style="color:#05FF16;  background-color: black;">ABOUT FEST</h1>
-    <div align="center">
-    <img  src="music-festival-.jpg" height="300px">
-    </div>
+    <a><img src="C:\Users\chand\Downloads\music-festival-.jpg"></a>
     <h1 style="background-color:#b0c1b7 ;" align="center">Fest registration form</h1>
 <form>
     <div align="center">
@@ -52,11 +50,11 @@
 </form>
 <div align="center">
 <h3 style="color:red;">Contact:-</h3>
-<a><img src="gmail.png" height="20px"></a>
+<a><img src="C:\Users\chand\Downloads\gmail.png" height="20px"></a>
 <p><strong>Email:-</strong>chandansai0456@gmail.com</p>
-<a><img src="phone app.png" height="30px"></a>
+<a><img src="C:\Users\chand\Downloads\phone app.png" height="30px"></a>
 <p><strong>Phone no:-</strong>9177617614</p>
-<a><img src="instAGRAM.webp" height="30px"></a>
+<a><img src="C:\Users\chand\Downloads\instAGRAM.webp" height="30px"></a>
 <p><strong>Instagram:-</strong>@_chandan_sai</p>
 </div>
 
