--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:aqua">
+  <body style="background-image:url(back.jpg)">
     <h1 style="background-color:aquamarine" align="center"><strong style="text-decoration:rgb(157, 168, 57) ;">SKUCET -</strong><em>Thunder 2k22</em></h1>
     <a ><img src="sku.png" height="480px"></a>
     <a><img src="download.jpeg" height="480px"></a>
@@ -9,10 +9,29 @@
     <h1 align="center" style="color:#05FF16;  background-color: black;">ABOUT FEST</h1>
     <div align="center">
     <img  src="music-festival-.jpg" height="300px">
+    <p style="color:#FFFFFF ;"><strong><P>&#128516;DANCING</P></strong><abbr title="Electrical & Electronical Engineering">EEE</abbr> ipsum dolor sit amet consectetur adipisicing elit. Dolorem reprehenderit velit, est hic iure nostrum! Sit minus nisi ducimus architecto. Necessitatibus quia earum ea similique animi! Quia iste dolorem nisi!</p>
+    
+    <div>
+        <img src="dj1.jpeg" height="300px">
+        <p style="color:#FFFFFF;"><strong><p>&#128525;DJ NIGHTS</p></strong>A music festival is a community event with performances of singing and instrument playing that is often presented with a theme such as musical genre (e.g., rock, blues, folk, jazz, classical music), nationality, locality of musicians, or holiday. Music festivals are generally organized by individuals or organizations within networks of music production, typically music scenes, the music industries, or institutions of music education. The music festival is the largest and one of the most important performance institutions in music life, a place for experiencing where the culture is at.</p>
     </div>
+    <div>
+        <img src="rangoli.jpg" height="300px">
+        <p style="color: #e2cbcb;"><strong><p>&#128151;RANGOLI</p></strong><q>Rangoli is drawn in different states with different names and on different themes</q>. Be it Kollam in Tamil Nadu, Sathiya in Gujarat, Alpana in Bengal, Mandana in Rajasthan, Osa in Odisha, Aipan in Uttarakhand, or simply the Rangoli from Maharashtra – every region has its own unique way of representing their traditions, folklore and practices. Now it is your chance to showcase your creative skills by participating in the Rangoli Making Competition. Anybody above 10 years can a participate in all of these competitions.</p>
+    </div>
+    <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+        Your browser does not support the HTML canvas tag.
+        </canvas>
+    </div>
+    <div align="center">
+    <svg width="100" height="100">
+        <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="4" fill="pink" />
+      </svg>
+    </div>
+      <br>
     <h1 style="background-color:#b0c1b7 ;" align="center">Fest registration form</h1>
 <form>
-    <div align="center">
+    <div  align="center">
         <label for="name   ">Name   :</label>
         <input id="name   " type="text" name="name   " required>
         <div align="center">
@@ -59,6 +78,13 @@
 <a><img src="instAGRAM.webp" height="30px"></a>
 <p><strong>Instagram:-</strong>@_chandan_sai</p>
 </div>
-
+    <div align="right">
+    <address style="background-color:#01EFBE ;">
+        Invited By Chandan.<br>
+        Join us On 15th NOV.<br>
+        Box 155, Shivaji Nagar<br>
+        Bangalore.
+    </address>
+    </div>
   </body>  
 </html>
